--- a/content/post/il-2025-11.adoc
+++ b/content/post/il-2025-11.adoc
@@ -61,7 +61,7 @@ If you need a hand with writing your abstract, you might find these articles tha
 * link:/2020/01/16/how-to-win-or-at-least-not-suck-at-the-conference-abstract-submission-game[How to win [or at least not suck\] at the conference abstract submission game]
 * link:/2022/08/31/%EF%B8%8F-writing-an-abstract-for-a-lightning-talk-%EF%B8%8F/[⚡️ Writing an abstract for a lightning talk ⚡️]
 
-And if you're speaker, check out the excellent article titled https://samharris.substack.com/p/the-silent-crowd["The Silent Crowd"] from Sam Harris which includes this important point (amongst others):
+And if you're a speaker, check out the excellent article titled https://samharris.substack.com/p/the-silent-crowd["The Silent Crowd"] from Sam Harris which includes this important point (amongst others):
 
 > *To change slides every thirty seconds is to be rendered nearly invisible by the apparatus. Having too many images can also force you to race to the end of your talk. A final flurry of slides and apologies depresses everyone.*
 ====
@@ -83,11 +83,11 @@ _(If you struggle reading the grey-on-black text, opening it in Safari and using
 == Stream Processing
 * 🔥 Regularly featured in these roundups in recent months is Yennick Trevels, who this month brings us a very cool https://kafkastreamsfieldguide.com/tools/interactive-architecture[Interactive Kafka Streams Architecture Simulation].
 * Expedia's Vishal Sharma writes about tips for https://medium.com/expedia-group-tech/colocating-input-partitions-with-kafka-streams-when-consuming-multiple-topics-sub-topology-matters-f92da955c905[consuming from multiple topics with Kafka Streams].
-* MongoDB are previewing built-in https://medium.com/towards-data-engineering/atlas-stream-processing-iceberg-private-preview-bfc163e09522[streaming processing capabilities] that can output to Iceberg tables directly.
+* MongoDB are previewing built-in https://medium.com/towards-data-engineering/atlas-stream-processing-iceberg-private-preview-bfc163e09522[stream processing capabilities] that can output to Iceberg tables directly.
 * An excellent explainer from Sean Falconer on https://seanfalconer.medium.com/real-time-anomaly-detection-with-apache-flink-38d909a09fce[Real-Time Anomaly Detection with Apache Flink]
 * Cool stuff from the team at Grab, showing how they use Flink to test the https://engineering.grab.com/real-time-data-quality-monitoring[compliance of Kafka messages with defined data contracts].
 * 🔥 Anton Borisov has a deep-dive exploration of https://medium.com/fresha-data-engineering/freeze-the-rivers-flow-evolution-of-streaming-computation-models-d4e5d0889205[Evolution of Streaming Computation Models], looking back to Chandy–Lamport, and then at Flink, Fluss, and beyond.
-* https://medium.com/@katyagorshkova/hands-on-with-flink-part-1-filtering-data-from-kafka-7bd3754f0233[This post] from Katya Gorshkova about using Flink to filter data from Kafka is a great example one of my favourite ways to learn something - understand the landscape and context, and write simple examples to build up understanding bit by bit.
+* https://medium.com/@katyagorshkova/hands-on-with-flink-part-1-filtering-data-from-kafka-7bd3754f0233[This post] from Katya Gorshkova about using Flink to filter data from Kafka is a great example of one of my favourite ways to learn something - understand the landscape and context, and write simple examples to build up understanding bit by bit.
 The https://medium.com/@katyagorshkova/hands-on-with-flink-part-2-running-on-kubernetes-with-the-operator-cb8fc9737f5b[second part] just dropped too, looking at deploying Flink with Kubernetes.
 * Three talks about Flink at this year's excellent P99Conf:
 ** https://www.p99conf.io/session/rivians-push-notification-sub-stream-with-mega-filter/[Rivian's Push Notification Sub Stream with Mega Filter]
@@ -132,7 +132,7 @@ The https://github.com/hpgrahsl/streaming-lakehouse-playground/blob/main/README.
 _Lots of links in this category this month!_
 _I've split out some of the technology-specific stuff into their own sections below._
 
-* Alexandre Bergere has https://medium.com/datalex/from-lakehouse-to-lakebase-why-databricks-buying-neon-changes-everything-ba4c1bcfa148[analysis] of Databrick's acquisition of Neon and what it means for their platform.
+* Alexandre Bergere has https://medium.com/datalex/from-lakehouse-to-lakebase-why-databricks-buying-neon-changes-everything-ba4c1bcfa148[analysis] of Databricks' acquisition of Neon and what it means for their platform.
 * OTF bake-off blogs might be old-hat, but this one https://medium.com/@gabriel.io/f7b3a987bf54[comparing Iceberg/Delta/Hudi] from Gabriel Popa adds a new spin to it - data sovereignty requirements for Switzerland.
 * https://lists.apache.org/thread/cy6y5xf5gg8fr12pg64f77gxdrtv52fn[Discussion in the Apache community] about optimisation proposals for Parquet and how to move them forward within the project structures.
 * 🔥 Umesh Dangat and Toby Cole from Yelp with details of their https://aws.amazon.com/blogs/big-data/how-yelp-modernized-its-data-infrastructure-with-a-streaming-lakehouse-on-aws/[adoption of Apache Paimon for their "streamhouse"].
@@ -157,7 +157,7 @@ All the talks are recorded and available online afterwards.
 +
 (Jark Wu has an https://www.linkedin.com/posts/jarkwu_new-blog-post-how-would-you-like-your-iceberg-activity-7392227653434519552-au-Q/[interesting reply to it here].)
 ** In his second post he looks at the idea of https://jack-vanlightly.com/blog/2025/11/19/have-your-iceberg-cubed-not-sorted-meet-qbeast-the-otree-spatial-index[OTree Spatial Indexes for Iceberg].
-* Cloudera's Ayush Saxena looks at how https://medium.com/@ayushtkn/basic-variant-datatype-support-in-apache-hive-with-apache-iceberg-93c8518fcea9[Apache Hive now supports Iceberg's implementation of the Varient data type].
+* Cloudera's Ayush Saxena looks at how https://medium.com/@ayushtkn/basic-variant-datatype-support-in-apache-hive-with-apache-iceberg-93c8518fcea9[Apache Hive now supports Iceberg's implementation of the Variant data type].
 * A good writeup from Manishankar Ravuri examining https://medium.com/@manishankarravuri/how-iceberg-and-delta-lake-handle-deletes-a-deep-dive-fb6fe81010fa[how deletions are handled] in different versions of the Iceberg spec, and in Delta Lake.
 * The surest sign of solid adoption of a technology is when tools supporting its use spring up in parallel to the project itself.
 Jack Leitch from Whoop has written about https://engineering.prod.whoop.com/glacierbase/[Glacierbase, which they have written to manage schemas across their PBs of Iceberg tables].
@@ -178,7 +178,7 @@ Open source and open standards FTW!
 * Useful https://muratbuffalo.blogspot.com/2025/11/disaggregated-database-management.html[notes] from Murat Demirbas discussing https://arxiv.org/pdf/2411.01269[a 2022 paper] on Disaggregated Database Management Systems.
 Murat also presented on the topic at InfoQ, and Steef-Jan Wiggers has written up https://www.infoq.com/news/2025/11/disaggregated-systems-qcon/[a summary of the talk].
 * 🔥 You do test your Postgres queries, right? Right?
-https://boringsql.com/posts/regresql-testing-queries/[This article] from Radim Marek discusses his https://github.com/boringSQL/regresql[fork of RegreSQL] and how it can be used to test a bunch of stuff including performance and query plan regresssions.
+https://boringsql.com/posts/regresql-testing-queries/[This article] from Radim Marek discusses his https://github.com/boringSQL/regresql[fork of RegreSQL] and how it can be used to test a bunch of stuff including performance and query plan regressions.
 * The SQL standard working group has formally accepted a change to the SQL standard to https://peter.eisentraut.org/blog/2025/11/11/waiting-for-sql-202y-group-by-all[add support for `GROUP BY ALL`].
 * https://duckdb.org/2025/11/12/announcing-duckdb-142[DuckDB 1.4.2 LTS] adds https://duckdb.org/2025/11/12/announcing-duckdb-142#iceberg-improvements[support for insert, update, and delete] statements on Iceberg tables from DuckDB.
 * 🔥 I loved https://www.p99conf.io/session/chatgpt-aint-got-on-me/[this talk from Andy Pavlo] at P99 Conf about practical research done into optimising query execution using techniques including—but not limited—to LLMs.
@@ -190,7 +190,7 @@ What a time to be alive in the data world 😁
 
 == General Data Stuff
 * 🔥 I've loved using notebooks like Zeppelin and Jupyter for years, and several times people have recommended I look at https://docs.marimo.io/[Marimo] - https://towardsdatascience.com/why-im-making-the-switch-to-marimo-notebooks/[this article] from Parul Pandey makes such a compelling case for it I _really_ do need to take a look. Maybe a project for the quiet holiday period :)
-* https://rayforcedb.com/[RayforceDB] is a new https://github.com/singaraiona/rayforce[open-source] (MIT license) columnar database less than 1Mb in size, and written in C.
+* https://rayforcedb.com/[RayforceDB] is a new https://github.com/singaraiona/rayforce[open-source] (MIT license) columnar database less than 1MB in size, and written in C.
 * Lots of people were impacted by the Cloudflare outage earlier this month; what I found interesting in the https://blog.cloudflare.com/18-november-2025-outage/[excellent postmortem that they published] was that it wasn't DNS, and it _was_ related, in part, to https://blog.cloudflare.com/18-november-2025-outage/#the-query-behaviour-change[unexpected/unforeseen results from a SQL query].
 * There were some https://www.p99conf.io/[excellent talks at P99 Conf] this year, including:
 ** Almog Gavra - https://www.p99conf.io/session/8x-better-than-protobuf-rethinking-serialization-for-data-pipelines/[8x Better Than Protobuf: Rethinking Serialization for Data Pipelines]
@@ -235,7 +235,7 @@ Simon Willison has https://simonw.substack.com/p/new-prompt-injection-papers-age
 
 * 🔥 I love this practical example from Thomas Ptacek that demonstrates _what an Agent actually **is**_ :  https://fly.io/blog/everyone-write-an-agent/?utm_source=tldrnewsletter[You Should Write An Agent] .
 ** This is one of the articles that made me realise that link:/2025/11/20/ive-been-thinking-about-agents-and-mcp-all-wrong/[I’ve been thinking about Agents and MCP all wrong].
-* 🔥 https://github.com/humanlayer/12-factor-agents[12 Factor Agents] is a very practical guide from Dex Horthy (modelled on the idea of 12 Factor Apps) looking at all the practical considerations you should have when designing and productionising LLM applicaitons.
+* 🔥 https://github.com/humanlayer/12-factor-agents[12 Factor Agents] is a very practical guide from Dex Horthy (modelled on the idea of 12 Factor Apps) looking at all the practical considerations you should have when designing and productionising LLM applications.
 * A useful list of https://www.philschmid.de/agentic-pattern#workflow-parallelization[Agentic Patterns] from Philipp Schmid.
 * Viktor Gamov recently did an excellent talk looking at https://speaking.gamov.io/RKUlRY/the-missing-protocol-how-mcp-bridges-llms-and-data-streams#sBj7RVH[How MCP Bridges LLMs and Data Streams]
 * What's the difference between prompt engineering and context engineering? And what _is_ context engineering and why does it matter so much? The team at Anthropic have written https://www.anthropic.com/engineering/effective-context-engineering-for-ai-agents[a good blog post] looking at these questions and more.
