--- a/content/post/il-2025-11.adoc
+++ b/content/post/il-2025-11.adoc
@@ -37,7 +37,7 @@ This newsletter has grown, both in audience and number of links.
 Back in link:/2025/02/03/interesting-links-february-2025/[February] there were fewer than two dozen links.
 This month, there's nearly 150 😲.
 
-I'd love to hear from you as to whether you would like to see fewer links, or how it is now is about right.
+I'd love to hear from you whether you would like to see fewer links, or if the current amount is about right.
 Also let me know if there are areas of which you want to see more (or less).
 
 Use the comment section at the end of this article to feedback, or find me on Twitter, LinkedIn, etc.
@@ -151,7 +151,7 @@ All the talks are recorded and available online afterwards.
 
 === Apache Iceberg
 
-* Two years ago one would have thought that Hell were freezing over (Iceberg! freezing! geddit?!) with https://www.databricks.com/blog/advancing-lakehouse-apache-iceberg-v3-databricks[Databricks announcing full support for Iceberg v3], but following the acquisition of Tabular and the wide adoption of Iceberg in the industry, it seems a pretty sensible move.
+* Two years ago one would have thought that Hell was freezing over (Iceberg! freezing! geddit?!) with https://www.databricks.com/blog/advancing-lakehouse-apache-iceberg-v3-databricks[Databricks announcing full support for Iceberg v3], but following the acquisition of Tabular and the wide adoption of Iceberg in the industry, it seems a pretty sensible move.
 * Two good Iceberg blogs from Jack Vanlightly this month.
 ** The first covers the nitty-gritty of a very real "rubber meets the road" integration question; if you're writing from Kafka to Iceberg, https://jack-vanlightly.com/blog/2025/11/5/how-would-you-like-your-iceberg-sir-stream-or-batch-ordered[how do you square the circle of choosing what kind of access to optimise the data layout] for?
 +
@@ -183,7 +183,7 @@ https://boringsql.com/posts/regresql-testing-queries/[This article] from Radim M
 * https://duckdb.org/2025/11/12/announcing-duckdb-142[DuckDB 1.4.2 LTS] adds https://duckdb.org/2025/11/12/announcing-duckdb-142#iceberg-improvements[support for insert, update, and delete] statements on Iceberg tables from DuckDB.
 * 🔥 I loved https://www.p99conf.io/session/chatgpt-aint-got-on-me/[this talk from Andy Pavlo] at P99 Conf about practical research done into optimising query execution using techniques including—but not limited—to LLMs.
 * In a similar vein, Alper Çiftçi from Trendyol writes about their experience https://medium.com/trendyol-tech/ai-powered-postgresql-query-optimization-a-comprehensive-approach-a646950eb5a3[using AI to optimise Postgres queries].
-* Sometimes it doesn't need an LLM to figure out how to optimise your queries; Nimisha Vernekar has a good primer on https://blog.dataengineerthings.org/sql-query-optimization-modern-techniques-and-best-practices-%EF%B8%8F-32db686d235d[basic query optimisation techniques] that it would behove anyone working with SQL to understand.
+* Sometimes you don't need an LLM to figure out how to optimise your queries; Nimisha Vernekar has a good primer on https://blog.dataengineerthings.org/sql-query-optimization-modern-techniques-and-best-practices-%EF%B8%8F-32db686d235d[basic query optimisation techniques] that it would behove anyone working with SQL to understand.
 * 🔥 Snowflake might have enabled access from Postgres to Iceberg with their open-source https://github.com/Snowflake-Labs/pg_lake[pg_lake] (see above), but DuckDB now has https://github.com/duckdb/pg_duckdb[pg_duckdb], with which you can use DuckDB from within Postgres and thus access not only Iceberg but the multitude of other sources and types of data that DuckDB can read.
 +
 What a time to be alive in the data world 😁
@@ -209,7 +209,7 @@ _I warned you link:/2025/09/30/interesting-links-september-2025/#_ai[previously]
 _As I read and learn more about it, I'm going to share interesting links (the clue is in the blog post title) that I find—whilst trying to avoid the breathless hype and slop._
 
 * 🔥 David Aronchick writes about the brutal reality gap between the vendors and the folk on the ground just trying to get shit done, in this insightful article: https://www.distributedthoughts.org/while-everyone-demos-ai-agents-engineers-fighting-syslogs/[Two KubeCons, One Conference: While Everyone Demos AI Agents, Engineers Are Fighting With Syslogs]
-* Thanks to LLMs, *StackOverflow is dead, long live Reddit!* (_I am paraphrasing; you can read the full paper with all the nuances and context here_: https://pmc.ncbi.nlm.nih.gov/articles/PMC11074245/[The consequences of generative AI for online knowledge communities])
+* Thanks to LLMs, *Stack Overflow is dead, long live Reddit!* (_I am paraphrasing; you can read the full paper with all the nuances and context here_: https://pmc.ncbi.nlm.nih.gov/articles/PMC11074245/[The consequences of generative AI for online knowledge communities])
 
 === AI in the Enterprise
 
@@ -246,7 +246,7 @@ Simon Willison has https://simonw.substack.com/p/new-prompt-injection-papers-age
 _Nothing to do with data, but stuff that I've found interesting or has made me smile._
 
 === Think
-* 🔥 The more senior you become in your career, the more you need to be aware of the sometimes-intended power of your words.
+* 🔥 The more senior you become in your career, the more you need to be aware of the sometimes-unintended power of your words.
 Kelly Vaughn explains why in this article https://modernleader.is/posts/invisible-gun[You might be carrying an invisible gun]
 * PostHog's Charles Cook argues that https://newsletter.posthog.com/p/collaboration-sucks[Collaboration sucks]
 * Practical advice from Andrea Canton: https://andreacanton.dev/posts/2025-11-08-always-ready-to-leave[Always Be Ready to Leave (Even If You Never Do)]
@@ -276,7 +276,7 @@ Kelly Vaughn explains why in this article https://modernleader.is/posts/invisibl
 
 == Just a reminder - leave a comment 👇
 
-* Would like to see fewer links in this monthly newsletter, or how it is now is about right?
+* Would you like to see fewer links in this monthly newsletter, or if the current amount is about right?
 * Are there any areas of which you want to see more (or less).
 * Would you prefer to read this as an email?
 
