--- a/content/post/il-2025-11.adoc
+++ b/content/post/il-2025-11.adoc
@@ -102,7 +102,7 @@ The https://medium.com/@katyagorshkova/hands-on-with-flink-part-2-running-on-kub
 == Data Platforms, Architectures, and Modelling
 * Details from StarRocks of how, and why, Cisco WebEx migrated https://medium.com/starrocks-engineering/how-cisco-webex-unified-real-time-analytics-with-starrocks-32bea95aed84[from Pinot to StarRocks] for the real-time analytics.
 * A summary from Eran Stiller of Stripe's recent InfoQ talk about https://www.infoq.com/news/2025/11/stripe-zero-downtime-date-move/[migrating petabytes of data between systems with zero downtime].
-* Rene Schallner has a cool blog post about https://renerocks.ai/blog/2025-11-02--tigerfans/[using TigerBeetle to build a high-performance ticketing system].
+* Rene Schallner has a cool blog post about link:+++https://renerocks.ai/blog/2025-11-02--tigerfans/+++[using TigerBeetle to build a high-performance ticketing system].
 * Luis Medina and Ajit Koti from Netflix bring us https://netflixtechblog.medium.com/how-and-why-netflix-built-a-real-time-distributed-graph-part-2-building-a-scalable-storage-layer-ff4a8dbd3d1f[the second part] of a series about the real time distributed graph platform that they're building, looking in this post at the use of Cassandra for the storage layer.
 * 🔥 https://www.uber.com/blog/i-o-observability-for-ubers-massive-petabyte-scale-data-lake/[Cool stuff from the team at Uber], detailing how they instrument I/O calls from Spark and other technologies and use Kafka and Pinot to store and monitor performance of a data lake that is petabytes in size.
 * A good recap from Rahul Joshi at Capital One of the https://medium.com/capital-one-tech/understanding-the-evolution-of-data-lakes-37d13b809be9[history of data lakes through to data lakehouses], along with https://medium.com/capital-one-tech/lakehouse-format-convergence-data-interoperability-b2f8be7c1c0b[an analysis of OTFs and their perhaps-inevitable convergence].
@@ -276,8 +276,8 @@ Kelly Vaughn explains why in this article https://modernleader.is/posts/invisibl
 
 == Just a reminder - leave a comment 👇
 
-* Would you like to see fewer links in this monthly newsletter, or if the current amount is about right?
-* Are there any areas of which you want to see more (or less).
+* Is the current amount of links in this newsletter about right, or would you like to see fewer?
+* Are there any areas of which you want to see more (or less)?
 * Would you prefer to read this as an email?
 
 Leave a comment below, or find me online :)
