--- a/content/post/reddit-graph.adoc
+++ b/content/post/reddit-graph.adoc
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: 'Analysing Reddit user behaviour with Neo4j'
+title: 'Using Graph Analysis with Neo4j to Spot Astroturfing on Reddit'
 date: "2025-12-01T11:55:22Z"
 image: "/images/2025/12/2025-12-01T172627.webp"
 credit: "https://bsky.app/profile/rmoff.net"
@@ -16,7 +16,7 @@ categories:
 
 Reddit is one of the longer-standing platforms on the internet, bringing together folk to discuss, rant, grumble, and troll others on all sorts of topics, from https://old.reddit.com/r/apachekafka/[Kafka] to https://old.reddit.com/r/dataengineering/[data engineering] to https://old.reddit.com/r/flashlight/[nerding out over really bright torches] to https://old.reddit.com/r/britishproblems/[grumbling about the state of the country]—and a whole lot more.
 
-As a social network it's a prime candidate for using graph analysis to examine how people interact.
+As a social network it's a prime candidate for using graph analysis to examine how people interact—and in today's post, hunt down some sneaky shills ;-)
 
 <!--more-->
 
@@ -121,7 +121,7 @@ WHERE n = target                        <2>
    OR (n)-[:REPLIED_TO]->(target)       <3>
 RETURN n
 ----
-<1> Predicate in the `MATCH` clauds, using curly-braces
+<1> Predicate in the `MATCH` clause, using curly-braces
 <2> Predicates in the `WHERE` clause
 <3> Match nodes based on either direction of the `REPLIED_TO` relationship
 
