--- a/content/post/catalogs-in-flink-sqla-primer.adoc
+++ b/content/post/catalogs-in-flink-sqla-primer.adoc
@@ -27,7 +27,7 @@ This apparent complexity has come about as a result of the decoupling of storage
 Unlike an RDBMS, it’s no longer self-evident where the catalog lives.
 
 
-image::/images/2024/02/6717dc1c82a396e17c5795fc_6702c2ab244841e00f5cbc24_66a3b680bee79c8155aa12b5_65cf631ba4e1ac9b123024fe_CleanShot%252525202024-02-16%25252520at%2525252013.28.19%252525402x.webp[A series of boxes showing an explanation of the disaggregation of the stack and its implications for the need for a catalog. It constrasts this to the RDBMS in which the storage and compute are integrated and thus the catalog can be too.]
+image::/images/2024/02/6717dc1c82a396e17c5795fc_6702c2ab244841e00f5cbc24_66a3b680bee79c8155aa12b5_65cf631ba4e1ac9b123024fe_CleanShot 2024-02-16 at 13.28.19@2x.webp[A series of boxes showing an explanation of the disaggregation of the stack and its implications for the need for a catalog. It constrasts this to the RDBMS in which the storage and compute are integrated and thus the catalog can be too.]
 You can think of the Flink catalog in RDBMS terms like external tables.
 Whilst regular tables in the RDBMS have their definition and location of the data internal to the RDBMS, with external tables the RDBMS' system catalog tracks the existence of the object's definition and location of the data, but the data and possibly additional metadata exists outside of the RDBMS.
 In the same way, Flink itself doesn't store data but needs to know where the data behind tables that you define resides.
