--- a/content/post/current-2024-recap.adoc
+++ b/content/post/current-2024-recap.adoc
@@ -4,7 +4,7 @@ date: "2024-09-19T00:00:00+00:00"
 draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- Apache Flink
+- Current
 image: "/images/2024/09/66eca56b10da1bf158e5f1bb_66eca5140c46edd03cca4246_01.webp"
 ---
 
