--- a/content/post/exploring-flink-cdc.adoc
+++ b/content/post/exploring-flink-cdc.adoc
@@ -5,6 +5,7 @@ draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Apache Flink
+- CDC
 image: "/images/2024/12/GeiUNCQW0AAJPg7.jpg"
 ---
 
