--- a/content/post/how-to-get-data-from-apache-kafka-to-apache-iceberg-on-s3-with-decodable.adoc
+++ b/content/post/how-to-get-data-from-apache-kafka-to-apache-iceberg-on-s3-with-decodable.adoc
@@ -4,7 +4,9 @@ date: "2024-06-18T00:00:00+00:00"
 draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- Apache Flink
+- Apache Kafka
+- Apache Iceberg
+- Decodable
 image: "/images/2024/06/kafka-iceberg-decodable.webp"
 ---
 
