--- a/content/post/how-to-migrate-from-amazon-msf.adoc
+++ b/content/post/how-to-migrate-from-amazon-msf.adoc
@@ -5,6 +5,8 @@ draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Apache Flink
+- Decodable
+- Amazon MSF
 image: "/images/2024/07/msf-migration.webp"
 ---
 
