--- a/content/post/adventures-with-apache-flink-and-delta-lake.adoc
+++ b/content/post/adventures-with-apache-flink-and-delta-lake.adoc
@@ -5,6 +5,7 @@ draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Apache Flink
+- Delta Lake
 image: "/images/2024/08/flink-delta-lake0_sm.jpg"
 ---
 
