--- a/content/post/checkpoint-chronicle-november-2023.adoc
+++ b/content/post/checkpoint-chronicle-november-2023.adoc
@@ -4,7 +4,7 @@ date: "2023-11-14T00:00:00+00:00"
 draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- Apache Flink
+- Checkpoint Chronicle
 image: "/images/2023/11/GAmkFodXIAA1JLG.jpg"
 ---
 
