--- a/content/post/checkpoint-chronicle-september-2024.adoc
+++ b/content/post/checkpoint-chronicle-september-2024.adoc
@@ -4,7 +4,7 @@ date: "2024-09-26T00:00:00+00:00"
 draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- Apache Flink
+- Checkpoint Chronicle
 image: "/images/2024/09/GYtyF0mXsAAR8To.jpg"
 ---
 
