--- a/content/post/declarative-resource-management-for-real-time-etl-with-decodable.adoc
+++ b/content/post/declarative-resource-management-for-real-time-etl-with-decodable.adoc
@@ -4,7 +4,7 @@ date: "2024-08-14T00:00:00+00:00"
 draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- Apache Flink
+- Decodable
 image: "/images/2024/08/declarative-resource-management.webp"
 ---
 
