--- a/content/post/decodable-vs-amazon-msf-getting-started-with-flink-sql.adoc
+++ b/content/post/decodable-vs-amazon-msf-getting-started-with-flink-sql.adoc
@@ -5,6 +5,8 @@ draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Apache Flink
+- Amazon MSF
+- Decodable
 image: "https://cdn.prod.website-files.com/665de628e01a0041a62ecd14/6717dc1c82a396e17c5795ff_6702c4a8ac27223c85ab1f72_667df1ac45e3e28f505d0273_AD_4nXcvPGYm5Jb7-jrYXpSSpbmfYjd5CFkRLHkf0PrGwFkibIO_HjUsXsj_apzvOEMRQW7b5zAF3ZY36x-DxFMLxOHHYg76FmikKEDGRi28FXNch-H8nFWzAOb2WcAk_i2Z_Vc9Kwb-1kIJJwzw18PWmXgDPAFJvk_cmxMaX6Kq9kivlpQjhrr8HBk.webp"
 ---
 
