--- a/content/post/streaming-data-from-postgres-to-snowflake-with-cdc-and-decodable.adoc
+++ b/content/post/streaming-data-from-postgres-to-snowflake-with-cdc-and-decodable.adoc
@@ -4,7 +4,9 @@ date: "2024-11-19T00:00:00+00:00"
 draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- Apache Flink
+- Postgres
+- Snowflake
+- Decodable
 image: "/images/2024/11/GdAQ-cXWoAA00tP.jpg"
 ---
 
