--- a/content/post/why-do-i-need-cdc.adoc
+++ b/content/post/why-do-i-need-cdc.adoc
@@ -4,7 +4,7 @@ date: "2024-10-15T00:00:00+00:00"
 draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- Apache Flink
+- CDC
 image: "/images/2024/10/why-cdc.png"
 ---
 
