Remove Decodable CTAs (kinda moot since the Redis acquisition)

--- a/content/post/catalogs-in-flink-sqla-primer.adoc
+++ b/content/post/catalogs-in-flink-sqla-primer.adoc
@@ -465,11 +465,9 @@ In my next post I’m going to look at the use of the Hive and JDBC catalogs tha
 One of the reasons I enjoy blogging is that it forces me to get a real handle on something that I’m trying to explain.
 What started off as a big ball of very confusing mud to me has clarified itself somewhat, and I hope the above writing has done the same for your understanding of catalogs in Flink SQL too.
 
-In the  link:https://www.decodable.co/blog/catalogs-in-flink-sql-hands-on[next post]  I’m going to show you how to use the built-in Hive catalog for Flink SQL, the JDBC catalog that is a catalog—but not how you might think—and also look at the wider ecosystem of catalogs that are supported in Flink including Apache Iceberg.
+In the  link:https://www.decodable.co/blog/catalogs-in-flink-sql-hands-on[next post]  I'm going to show you how to use the built-in Hive catalog for Flink SQL, the JDBC catalog that is a catalog—but not how you might think—and also look at the wider ecosystem of catalogs that are supported in Flink including Apache Iceberg.
 
-I’ll wrap up the series with a magical mystery tour through the desolate landscape of troubleshooting Flink SQL catalog deployments and configurations.
+I'll wrap up the series with a magical mystery tour through the desolate landscape of troubleshooting Flink SQL catalog deployments and configurations.
 Stay tuned for all the fun!
-
-*Fun fact: if you use Decodable’s fully managed Flink platform you don’t ever have to worry about catalogs—we handle it all for you!*
 
 Cover photo credit:  link:https://unsplash.com/@danielforsman?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash[Daniel Forsman]
