--- a/content/post/catalogs-in-flink-sqlhands-on.adoc
+++ b/content/post/catalogs-in-flink-sqlhands-on.adoc
@@ -1070,9 +1070,7 @@ c_iceberg_jdbc  | db01            | t_foo      | s3://warehouse/db01/t_foo/metad
 ----
 
 === In Conclusion…
-If you’ve stuck with me this far, well done!
+If you've stuck with me this far, well done!
 🙂 My aim was not to put you through the same pain as I had in traversing this, but to summarise the key constants and variables when using the different components and catalogs.
 
 Stay tuned to this blog for my next post which will be a look at some of the troubleshooting techniques that can be useful when exploring Flink SQL.
-
-*Fun fact: if you use Decodable’s fully managed Flink platform you don’t ever have to worry about catalogs—we handle it all for you!*
