--- a/content/post/decodable-vs-amazon-msf-getting-started-with-flink-sql.adoc
+++ b/content/post/decodable-vs-amazon-msf-getting-started-with-flink-sql.adoc
@@ -1068,10 +1068,7 @@ You just bring the config and the business logic; we do the rest.
 Speaking of REST, there’s an API to use too if you’d like :)
 
 On Amazon MSF, SQL is used for building connectors as well as transforming data.
-To use a connector other than what’s included means making the JAR and dependencies available to MSF.
+To use a connector other than what's included means making the JAR and dependencies available to MSF.
 Each time you change a dependency means restarting the notebook, so iteration can be a frustratingly slow process.
-The version of Flink (1.15) also doesn’t help as several features (such as`CREATE TABLE…AS SELECT`) aren’t available.
-Lastly, once you’ve built your pipeline in SQL using the Studio Notebooks, to deploy it as an application means bundling it as a PyFlink ZIP and deploying it—something that for me didn’t work out of the box.
-
-Ready to give it a go for yourself?
-You can find Amazon MSF  link:https://aws.amazon.com/managed-service-apache-flink/[here] , and sign up for Decodable  link:https://app.decodable.co/-/accounts/create[here] .
+The version of Flink (1.15) also doesn't help as several features (such as`CREATE TABLE…AS SELECT`) aren't available.
+Lastly, once you've built your pipeline in SQL using the Studio Notebooks, to deploy it as an application means bundling it as a PyFlink ZIP and deploying it—something that for me didn't work out of the box.
