--- a/content/post/how-to-migrate-from-amazon-msf.adoc
+++ b/content/post/how-to-migrate-from-amazon-msf.adoc
@@ -126,12 +126,6 @@ Similarly, if you want to send data from Flink to another system, you just write
 image::/images/2024/07/6717dbfe82a396e17c5789cb_66a7d087472dc2b963767a35_AD_4nXdK6_1SXz1n5cAnTcn4SrrIPCsAokD2x6fQ2ZkUdgHqwZhK9HZx1iZtHwO1JJ6Pv7HSi524dicVlIQI79-3JOxxS_J2gA0IKRpo3WBvU8LFdk3ENpzRUIp8btLOsCFX7Mq1Ru7EzctcTcNpx0W-N_Ilk2uf.webp[]
 
 === Wrapping Up
-Running your Flink jobs on Decodable gives you the power and flexibility of Apache Flink, coupled with Decodable’s best-of-breed developer experience, expertise, and support.
-You can bring your jobs straight over or use Decodable’s pre-built connectors to simplify and optimize your code maintenance footprint.
-With support for both Java and PyFlink (plus SQL on its own, if you’d rather), we’ve got you covered regardless of your developer’s preferred coding language.
-
-
-=== Resources
-* link:https://info.decodable.co/decoding-the-top-4-real-time-data-platforms-powered-by-apache-flink[Decoding the Top 4 Real-Time Data Platforms Powered by Apache Flink] : Considerations for selecting a platform for ETL and stream processing at scale
-* link:https://info.decodable.co/ebk-the-blueprint-for-success-with-real-time-etl-data[The Blueprint for Success with Real-time Data] : Accelerate your real-time ETL, ELT, and streaming initiatives with Decodable
-* Sign up for your  link:https://app.decodable.co/-/accounts/create[free Decodable account]  today and give it a try!
+Running your Flink jobs on Decodable gives you the power and flexibility of Apache Flink, coupled with Decodable's best-of-breed developer experience, expertise, and support.
+You can bring your jobs straight over or use Decodable's pre-built connectors to simplify and optimize your code maintenance footprint.
+With support for both Java and PyFlink (plus SQL on its own, if you'd rather), we've got you covered regardless of your developer's preferred coding language.
