--- a/content/post/streaming-data-from-postgres-to-snowflake-with-cdc-and-decodable.adoc
+++ b/content/post/streaming-data-from-postgres-to-snowflake-with-cdc-and-decodable.adoc
@@ -556,9 +556,7 @@ Both achieve the same result of a CDC connection to Postgres sending an initial 
 With the data in Snowflake, we can perform whatever analytics on it that we want.
 
 But Decodable is not just connectors, it also offers a powerful processing layer built on Flink SQL.
-With this, you could take the streams of data from Postgres and apply transformations before they’re written to Snowflake.
+With this, you could take the streams of data from Postgres and apply transformations before they're written to Snowflake.
 For example, performing the denormalisation across the three source tables to then write One Big Table (OBT) to Snowflake, thus avoiding any need for subsequent pre-processing before analytical queries can be run.
-
-Sign up for a  link:https://app.decodable.co/-/accounts/create[free trial today]  and give Decodable a try.
 
 _You can find the source code used for the Postgres example, and sample YAML resource definitions,_ link:https://github.com/decodableco/examples/tree/main/postgres-to-snowflake-with-cdc[on GitHub] _._
